crates/picante/tests/ui/interned_generics.rs
#[picante::interned]
pub struct Foo<T> {
    pub x: T,
}

fn main() {}
